--- a/config/theChosenOne.yaml
+++ b/config/theChosenOne.yaml
@@ -1,13 +1,13 @@
 pretrained_model_name_or_path: stabilityai/stable-diffusion-xl-base-1.0
 pretrained_vae_model_name_or_path: madebyollin/sdxl-vae-fp16-fix
 # 
-inference_prompt: A photo of a 50 years old man with curly hair.
+inference_prompt: A sticker of a cute panda.
 learnable_property: object
 initializer_token: cha
 placeholder_token: <$V$>
 repeats: 1
 save_as_full_pipeline: true
-validation_prompt: A photo of <$V$>
+validation_prompt: A sticker of <$V$>
 caption_column: text
 resolution: 1024
 random_flip: true
@@ -19,9 +19,9 @@ lr_scheduler: constant
 lr_warmup_steps: 0
 mixed_precision: bf16
 seed: 42
-character_name: photo_man
-output_dir: ./experiments
-train_data_dir: ./loop_images
+character_name: panda
+output_dir: /content/drive/MyDrive/hvn/consistent/experiments
+train_data_dir: /content/drive/MyDrive/hvn/consistent/loop_images
 backup_data_dir_root: /content/drive/MyDrive/hvn/consistent  # Your dataset backup folder
 # lora_ckpt_dir: checkpoint-1200
 max_train_steps: 500
