--- a/config/theChosenOne.yaml
+++ b/config/theChosenOne.yaml
@@ -1,7 +1,7 @@
 pretrained_model_name_or_path: stabilityai/stable-diffusion-xl-base-1.0
 pretrained_vae_model_name_or_path: madebyollin/sdxl-vae-fp16-fix
 # 
-inference_prompt: a sticker of a ginger cat
+inference_prompt: a sticker of a red panda
 learnable_property: object
 initializer_token: cha
 placeholder_token: <$V$>
@@ -19,7 +19,7 @@ lr_scheduler: constant
 lr_warmup_steps: 0
 mixed_precision: bf16
 seed: 42
-character_name: ginger_cat
+character_name: red_panda
 output_dir: ./experiments
 train_data_dir: ./loop_images
 backup_data_dir_root: ./backup  # Your dataset backup folder
